# chess-imitation

./: CMakeLists.txt  README.md  main.cpp
private/: Board.cpp  FrameBuffer.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Rook.cpp  Window.cpp
public/: Board.hpp  FrameBuffer.hpp  King.hpp  Knight.hpp  Pawn.hpp  Piece.hpp  Position.hpp  Rook.hpp  Window.hpp
